Update drawchecker test only to find that the functionality is failing and needs investigation work.